[package]
name = "wsl-headless-dev"
version = "0.0.1"
edition = "2021"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/wsl-headless-dev"
license = "Apache-2.0"
rust-version = "1.76"

[dependencies]
windows = { version = "0.54", default_features = false, features = ["Win32_System_Power", "Win32_System_Console", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security"] }
tokio = { version = "1.36", default-features = false, features = ["macros", "rt-multi-thread", "io-util", "signal", "net", "process", "time"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
