[package]
name = "wsl-headless-dev"
version = "0.0.1"
edition = "2021"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/wsl-headless-dev"
license = "Apache-2.0"
rust-version = "1.77"

[dependencies]
windows = { version = "*", default-features = false, features = ["Win32_System_Power", "Win32_System_Console", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security"] }
async-channel = { version = "2.0", default-features = false }
async-io = { version = "*", default-features = false }
async-process = { version = "2.0", default-features = false }
async-net = { version = "2.0", default-features = false }
async-executor = { version = "1.5", default-features = false }
futures-lite = { version = "2.0", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
